Fixed flexbox on mobile. Links full height now

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,100 +1,70 @@
 header h1{
   text-align: center;
-  // margin-top: 16vh;
-  // margin-bottom: 21vh;
 }
 
 .galleries{
 	position: relative;
 	display: flex;
 	flex-direction: column;
-	// justify-content: center;
-  // align-items: center;
-
-  // padding: 10% 0;
-	/*pointer-events: none;*/
-  .row{
-    // position: relative;
-    display: flex;
-    // flex-direction: column;
-    flex: 1 1 auto;
-    justify-content: center;
-    align-items: center;
-    // width: 100%;
-    height: 90vh;
-    // background: #000;
-    border-bottom: 3px solid pink;
-  // }
-  // .gallery-item{
-    // width: 50vw;
-    // height: calc(100vh - 16rem);
-    // height: 50vh;
-    // width: 350px;
-    // height: 350px;
-    // background: red;
-    // min-height: 600px;
-    // margin-bottom: 20%;
-    // position: relative;
-    background-image: url('src/assets/images/thumbs/thumb_fractures.jpg');
-    background-size: 350px 350px;
-    background-position: center;
-    background-repeat: no-repeat;
-
-    // &.odd .desc{
-    //   right: -15vw;
-    //   text-align: right;
-    // }
-    // &.even .desc{
-    //   left: -15vw;
-    // }
-    // &[data-color="fractures"] .gallery_img{
-    //   background: url('src/assets/images/thumbs/thumb_pattern_full_img146.jpg') repeat top left;
-    // }
-    // &[data-color="photography"] .gallery_img{
-    //   background: url('src/assets/images/thumbs/thumb_pattern_full_img146.jpg') repeat top left;
-    // }
-    // &[data-color="textures"] .gallery_img{
-    //   background: url('src/assets/images/thumbs/thumb_pattern_full_img146.jpg') repeat top left;
-    // }
-    // &[data-color="paintings"] .gallery_img{
-    //   background: url('src/assets/images/thumbs/thumb_pattern_full_img146.jpg') repeat top left;
-    // }
-    .desc{
-      // position: absolute;
-      // bottom: 0;
-      // padding-bottom: 5rem;
-      // width: 100%;
-      text-align: center;
-      cursor: pointer;
-      h1{
-        margin: 0;
-        font-family: 'salomeregular', Georgia, Serif;
-      }
-      p{
-        font-size: 1.5rem;
-      }
-    }
-  }
+	.row{
+		display: flex;
+		flex: 1 1 auto;
+		justify-content: center;
+		align-items: center;
+		height: 60vh;
+		background-image: url('src/assets/images/thumbs/thumb_fractures.jpg');
+		background-size: 350px 350px;
+		background-position: center;
+		background-repeat: no-repeat;
+		margin-bottom: 10px;
+		.desc{
+			text-align: center;
+			text-decoration: none;
+			color: #222;
+			display: flex;
+			flex:1;
+			// flex: 1 1 auto;
+			flex-direction: column;
+			justify-content: center;
+			// align-items: center;
+			height: 100%;
+			h1{
+				margin: 0;
+				font-family: 'salomeregular', Georgia, Serif;
+			}
+			p{
+				font-size: 1.5rem;
+			}
+		}
+  	}
 }
 
 
 .gallery{
-  background-size: cover;
-  .gallery_img{
-    width: 100%;
-    height: 100%;
-  }
+	background-size: cover;
+	  .gallery_img{
+		width: 100%;
+		height: 100%;
+	}
 }
 .gallery-link:hover {
-  cursor: pointer;
+  	cursor: pointer;
 }
 
 
-  @media only screen and (min-width:960px){
-    .galleries.row{
-      min-height: 750px;
-    }
-  }
+@media only screen and (min-width:960px){
+	.galleries {
+		.row{
+			height: 90vh;
+			.desc{
+				flex: none;
+				// background-color: pink;
+				height: auto;
+				// flex:1;
+			}
+		}
+	}
+}
 
 
 
