--- a/src/styles.scss
+++ b/src/styles.scss
@@ -52,6 +52,7 @@ body{
 
 header{
 	height: 30vh;
+	min-height: 240px;
 }
 
 main{
